# osu-dreamer-gui

./: .gitignore  README.md  dreamer.spec  dreamer_gui.py  pyproject.toml
osu_dreamer_gui/: __init__.py
osu_dreamer_gui/gui/elements/: create_button.py  mp3_choose.py  params_boxes.py
osu_dreamer_gui/gui/handlers/: mp3_choose_upload.py  on_create.py
osu_dreamer_gui/gui/views/: home.py
osu_dreamer_gui/modules/: generate.py
osu_dreamer_gui/modules/encoder/: encoder.py
